--- a/MovieStarPlayer/Base.lproj/Main.storyboard
+++ b/MovieStarPlayer/Base.lproj/Main.storyboard
@@ -27,23 +27,38 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="76"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RLu-zx-aFh">
-                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="76"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RLu-zx-aFh">
+                                                    <rect key="frame" x="5" y="5" width="66" height="66"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="RLu-zx-aFh" secondAttribute="height" id="5Da-vV-Fvn"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="roc-PF-jML">
-                                                    <rect key="frame" x="93" y="11" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="roc-PF-jML">
+                                                    <rect key="frame" x="81" y="5" width="303" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7ls-QK-xCS">
-                                                    <rect key="frame" x="93" y="40" width="266" height="36"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7ls-QK-xCS">
+                                                    <rect key="frame" x="81" y="31" width="323" height="40"/>
                                                     <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="8Sw-c3-MKw"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="RLu-zx-aFh" firstAttribute="top" secondItem="deM-s4-ZTV" secondAttribute="top" constant="5" id="13g-2F-ROh"/>
+                                                <constraint firstItem="7ls-QK-xCS" firstAttribute="top" secondItem="roc-PF-jML" secondAttribute="bottom" constant="5" id="32H-sD-vz7"/>
+                                                <constraint firstAttribute="bottom" secondItem="7ls-QK-xCS" secondAttribute="bottom" constant="5" id="53j-Nq-Cw4"/>
+                                                <constraint firstItem="RLu-zx-aFh" firstAttribute="leading" secondItem="deM-s4-ZTV" secondAttribute="leading" constant="5" id="7qQ-Pr-mYL"/>
+                                                <constraint firstItem="roc-PF-jML" firstAttribute="leading" secondItem="RLu-zx-aFh" secondAttribute="trailing" constant="10" id="Bd9-Ft-JS3"/>
+                                                <constraint firstAttribute="bottom" secondItem="RLu-zx-aFh" secondAttribute="bottom" constant="5" id="QyZ-td-Oun"/>
+                                                <constraint firstItem="roc-PF-jML" firstAttribute="top" secondItem="deM-s4-ZTV" secondAttribute="top" constant="5" id="e6x-sw-LbU"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="roc-PF-jML" secondAttribute="trailing" constant="10" id="ekY-qy-vIf"/>
+                                                <constraint firstAttribute="trailing" secondItem="7ls-QK-xCS" secondAttribute="trailing" constant="10" id="liV-Vd-Ajt"/>
+                                                <constraint firstItem="7ls-QK-xCS" firstAttribute="leading" secondItem="RLu-zx-aFh" secondAttribute="trailing" constant="10" id="nfP-Ik-VDX"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
