--- a/MovieStarPlayer/Base.lproj/Main.storyboard
+++ b/MovieStarPlayer/Base.lproj/Main.storyboard
@@ -75,9 +75,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="xLe-t3-Cqs">
                         <barButtonItem key="leftBarButtonItem" title="Item" id="RfO-E5-ZhK"/>
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="NuE-zd-XYc">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="NuE-zd-XYc">
                             <connections>
-                                <action selector="addVideo:" destination="BYZ-38-t0r" id="MJz-of-Qc8"/>
+                                <action selector="moveToAddVideo:" destination="BYZ-38-t0r" id="DMW-Me-wPD"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
