--- a/MovieStarPlayer/Base.lproj/Main.storyboard
+++ b/MovieStarPlayer/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rMM-Kt-TLX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,7 +19,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="76" id="Kit-jU-rED" customClass="VideoCell" customModule="MovieStarPlayer" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="videoCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="videoCell" rowHeight="76" id="Kit-jU-rED" customClass="VideoCell" customModule="MovieStarPlayer" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="76"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kit-jU-rED" id="deM-s4-ZTV">
@@ -33,13 +32,13 @@
                                                         <constraint firstAttribute="width" secondItem="RLu-zx-aFh" secondAttribute="height" id="5Da-vV-Fvn"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="roc-PF-jML">
-                                                    <rect key="frame" x="81" y="5" width="303" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="roc-PF-jML">
+                                                    <rect key="frame" x="81" y="5" width="48" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7ls-QK-xCS">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7ls-QK-xCS" customClass="RatingView" customModule="MovieStarPlayer" customModuleProvider="target">
                                                     <rect key="frame" x="81" y="31" width="323" height="40"/>
                                                     <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
@@ -55,18 +54,22 @@
                                                 <constraint firstItem="roc-PF-jML" firstAttribute="leading" secondItem="RLu-zx-aFh" secondAttribute="trailing" constant="10" id="Bd9-Ft-JS3"/>
                                                 <constraint firstAttribute="bottom" secondItem="RLu-zx-aFh" secondAttribute="bottom" constant="5" id="QyZ-td-Oun"/>
                                                 <constraint firstItem="roc-PF-jML" firstAttribute="top" secondItem="deM-s4-ZTV" secondAttribute="top" constant="5" id="e6x-sw-LbU"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="roc-PF-jML" secondAttribute="trailing" constant="10" id="ekY-qy-vIf"/>
-                                                <constraint firstAttribute="trailing" secondItem="7ls-QK-xCS" secondAttribute="trailing" constant="10" id="liV-Vd-Ajt"/>
-                                                <constraint firstItem="7ls-QK-xCS" firstAttribute="leading" secondItem="RLu-zx-aFh" secondAttribute="trailing" constant="10" id="nfP-Ik-VDX"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7ls-QK-xCS" secondAttribute="trailing" constant="10" id="eXi-YY-Okb"/>
+                                                <constraint firstAttribute="trailing" secondItem="7ls-QK-xCS" secondAttribute="trailing" priority="750" constant="10" id="liV-Vd-Ajt"/>
+                                                <constraint firstItem="7ls-QK-xCS" firstAttribute="leading" secondItem="RLu-zx-aFh" secondAttribute="trailing" constant="10" id="zjm-8q-t8f"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="imageViewCell" destination="RLu-zx-aFh" id="bzY-C3-Gdd"/>
                                             <outlet property="labelCell" destination="roc-PF-jML" id="dNI-N8-3eb"/>
-                                            <outlet property="ratingViewCell" destination="7ls-QK-xCS" id="FtS-Q6-5gd"/>
+                                            <outlet property="ratingViewCell" destination="7ls-QK-xCS" id="7ed-ie-W7g"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="tKa-jg-Jsk"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="8AR-x3-dMc"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -86,6 +89,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableViewMain" destination="IFD-Ze-nJ0" id="HpK-OW-Qdl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
