--- a/MovieStarPlayer/Player.storyboard
+++ b/MovieStarPlayer/Player.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -51,8 +50,12 @@
                         <viewLayoutGuide key="safeArea" id="BD2-qT-E1U"/>
                     </view>
                     <navigationItem key="navigationItem" id="GDG-Cq-aGv">
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="o4b-x1-a3I"/>
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="8qN-3m-LkB"/>
+                        <barButtonItem key="leftBarButtonItem" title="cancel" id="o4b-x1-a3I">
+                            <connections>
+                                <action selector="closePlayerView:" destination="gE5-C9-flL" id="cr1-Ne-dXF"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="save" id="8qN-3m-LkB"/>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6f5-09-jaN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
